--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             data.addRow([
               (new Date(row.timestamp)),
               parseFloat(row.temp),
-              parseFloat(row.humidty)
+              parseFloat(row.humidity)
             ]);
           });
 
