--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 
     </script>
     <META HTTP-EQUIV="refresh" CONTENT="60">
+	<title>SHT1 Stream</title>
   </head>
   <body>
     <div id="chart" style="width: 100%;"></div>
