--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
 	<title>SHT1 Stream</title>
   </head>
   <body>
+    <h1>SHT1x Project</h1>
+	<H2>Arduino with Ethernet Shield</H2>
     <div id="chart" style="width: 100%;"></div>
 	<BODY BGCOLOR="00FFFF">
+	<a href="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8">Click Here for Data Stream</a>
   </body>
 </html>
