--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-GB">
   <head>
     <!-- EXTERNAL LIBS-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -57,10 +57,12 @@
 	<title>SHT1 Stream</title>
   </head>
   <body>
+    <BODY BGCOLOR="00FFFF">
     <h1>SHT1x Project</h1>
-	<H2>Arduino with Ethernet Shield</H2>
+	<h2>Arduino with Ethernet Shield</h2>
+	<hr>
     <div id="chart" style="width: 100%;"></div>
-	<BODY BGCOLOR="00FFFF">
-	<a href="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8">Click Here for Data Stream</a>
+	<br/>
+	<a title="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" href="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" target="_blank">Click Here for Data Stream</a>
   </body>
 </html>
