--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 
           data.addColumn('datetime', 'Time');
           data.addColumn('number', 'Temp');
-          data.addColumn('number', 'Humidity');
+          //data.addColumn('number', 'Humidity');
 
           $.each(results, function (i, row) {
             data.addRow([
               (new Date(row.timestamp)),
               parseFloat(row.temp),
-              parseFloat(row.humidity)
+             // parseFloat(row.humidity)
             ]);
           });
 
@@ -57,7 +57,7 @@
 	<title>SHT1 Stream</title>
   </head>
   <body>
-    <BODY BGCOLOR="00FFFF">
+    <body style="background-color:aqua">
     <h1>SHT1x Project</h1>
 	<h2>Arduino with Ethernet Shield</h2>
 	<hr>
