--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 	<hr>
     <div id="chart" style="width: 100%;"></div>
 	<br/>
+	<div id="chart" style="width: 100%;"></div>
 	<a title="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" href="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" target="_blank">Click Here for Data Stream</a>
   </body>
 </html>
