--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en-GB">
   <head>
     <!-- EXTERNAL LIBS-->
@@ -9,7 +8,7 @@
     <script>
 
       // onload callback
-      function drawChart() {
+      function drawChartT() {
 
         var public_key = '3J5xqbLGGqcJQqMor7g8';
 
@@ -24,17 +23,52 @@
 
           data.addColumn('datetime', 'Time');
           data.addColumn('number', 'Temp');
-          data.addColumn('number', 'Humidity');
+        //  data.addColumn('number', 'Humidity');
 
           $.each(results, function (i, row) {
             data.addRow([
               (new Date(row.timestamp)),
               parseFloat(row.temp),
+            //  parseFloat(row.humidity)
+            ]);
+          });
+
+          var chart = new google.visualization.LineChart($('#chartT').get(0));
+
+          chart.draw(data, {
+            title: 'SHT1 Test'
+          });
+
+        });
+
+      }
+	  
+	  function drawChartH() {
+
+        var public_key = '3J5xqbLGGqcJQqMor7g8';
+
+        // JSONP request
+        var jsonData = $.ajax({
+          url: 'https://data.sparkfun.com/output/' + public_key + '.json',
+          data: {page: 1},
+          dataType: 'jsonp',
+        }).done(function (results) {
+
+          var data = new google.visualization.DataTable();
+
+          data.addColumn('datetime', 'Time');
+          //data.addColumn('number', 'Temp');
+          data.addColumn('number', 'Humidity');
+
+          $.each(results, function (i, row) {
+            data.addRow([
+              (new Date(row.timestamp)),
+            //  parseFloat(row.temp),
               parseFloat(row.humidity)
             ]);
           });
 
-          var chart = new google.visualization.LineChart($('#chart').get(0));
+          var chart = new google.visualization.LineChart($('#chartH').get(0));
 
           chart.draw(data, {
             title: 'SHT1 Test'
@@ -50,7 +84,8 @@
       });
 
       // call drawChart once google charts is loaded
-      google.setOnLoadCallback(drawChart);
+      google.setOnLoadCallback(drawChartT);
+	  google.setOnLoadCallback(drawChartH);
 
     </script>
     <META HTTP-EQUIV="refresh" CONTENT="60">
@@ -61,9 +96,10 @@
     <h1>SHT1x Project</h1>
 	<h2>Arduino with Ethernet Shield</h2>
 	<hr>
-    <div id="chart" style="width: 100%;"></div>
+    <div id="chartT" style="width: 100%;"></div>
 	<br/>
-	<div id="chart" style="width: 100%;"></div>
+	<div id="chartH" style="width: 100%;"></div>
+	<br/>
 	<a title="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" href="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" target="_blank">Click Here for Data Stream</a>
   </body>
 </html>
