--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           var chart = new google.visualization.LineChart($('#chartT').get(0));
 
           chart.draw(data, {
-            title: 'Temperature'
+            title: 'Temperature/°C'
           });
 
         });
@@ -71,7 +71,7 @@
           var chart = new google.visualization.LineChart($('#chartH').get(0));
 
           chart.draw(data, {
-            title: 'Humidity'
+            title: 'Humidity/%'
           });
 
         });
