--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           var chart = new google.visualization.LineChart($('#chartT').get(0));
 
           chart.draw(data, {
-            title: 'Temperature/°C'
+            title: 'Temperature/<sup>0<.sup>C'
           });
 
         });
