--- a/index.html
+++ b/index.html
@@ -34,13 +34,11 @@
           });
 
           var chart = new google.visualization.LineChart($('#chartT').get(0));
-		  var optinos = {
-			
-		  };
+
           chart.draw(data, {
-			title: 'Temperature/C'
-		  };
-		  
+            title: 'Temperature/°C'
+          });
+
         });
 
       }
