--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           var chart = new google.visualization.LineChart($('#chartT').get(0));
 
           chart.draw(data, {
-            title: 'Temperature'
+            title: 'Temperature/C'
           });
 
         });
@@ -92,8 +92,8 @@
           var data = new google.visualization.DataTable();
 
           data.addColumn('datetime', 'Time');
-          data.addColumn('number', 'Temp');
-          data.addColumn('number', 'Humidity');
+          data.addColumn('number', 'Temp/C');
+          data.addColumn('number', 'Humidity/%');
 
           $.each(results, function (i, row) {
             data.addRow([
@@ -108,7 +108,7 @@
           chart.draw(data, {
             title: 'Humidity and Temperature',
 			curveType: 'function',
-			legend: { position: 'bottom' }
+			legend: { position: 'right' }
           });
 
         });
