--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
 				0: {title: 'Temperature/C'},
 				1: {title: 'Humidity/%'}
 			},
-			vAxis: {
+			<!-- vAxis: {
 				viewWindow: {
 					min:0
 				}
-			}
+			} -->
 		  }
 		  
           chart.draw(data, options );
