--- a/index.html
+++ b/index.html
@@ -117,11 +117,10 @@
 				0: {title: 'Temperature/C',
 					viewWindowMode:'explicit',
 					viewWindow:{
-								max:50,
-								min:15
+								maxValue:50,
+								minValue:15
 				},
 				1: {title: 'Humidity/%',
-					max:100
 				}
 			},
 		  }
