--- a/index.html
+++ b/index.html
@@ -115,10 +115,9 @@
 			vAxes: {
 				// Adds titles to each axis.
 				0: {title: 'Temperature/C',
-					viewWindowMode:'explicit',
 					viewWindow:{
-								maxValue:50,
-								minValue:15
+								max:50,
+								min:15
 				},
 				1: {title: 'Humidity/%',
 				}
