--- a/index.html
+++ b/index.html
@@ -114,14 +114,15 @@
 			},
 			vAxes: {
 				// Adds titles to each axis.
-				0: {title: 'Temperature/C',
-					viewWindow:{
-								max:50,
-								min:15
-				},
-				1: {title: 'Humidity/%',
-				}
+				0: {title: 'Temperature/C'},
+				1: {title: 'Humidity/%'}
 			},
+			 vAxis: {
+				viewWindow: {
+					max:100,
+					min:0
+				}
+			} 
 		  }
 		  
           chart.draw(data, options );
