--- a/index.html
+++ b/index.html
@@ -114,15 +114,18 @@
 			},
 			vAxes: {
 				// Adds titles to each axis.
-				0: {title: 'Temperature/C'},
-				1: {title: 'Humidity/%'}
-			},
-			 vAxis: {
-				viewWindow: {
-					max:100,
-					min:0
-				}
-			} 
+				0: {title: 'Temperature/C',
+					viewWindow: {
+						max:50,
+						min:0
+					},
+				1: {title: 'Humidity/%',
+					viewWindow: {
+						max:50,
+						min:0},
+					}
+			}
+			
 		  }
 		  
           chart.draw(data, options );
