--- a/index.html
+++ b/index.html
@@ -157,11 +157,9 @@
     <h1>SHT1x Project</h1>
 	<h2>Arduino with Ethernet Shield</h2>
 	<hr>
-    <div id="chart" style="width: 100%;"></div>
-	<br/>
-	<div id="chartT" style="width: 50%;"></div>
-	
-	<div id="chartH" style="width: 50%;"></div>
+    <div id="chart" style="width: 100%; height: 1000px"></div>
+	<div id="chartT" style="width: 100%;"></div>
+	<div id="chartH" style="width: 100%;"></div>
 	<br/>
 	<a title="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" href="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" target="_blank">Click Here for Data Stream</a>
   </body>
