--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           var chart = new google.visualization.LineChart($('#chart').get(0));
 		  var options = {
 			title: 'Humidity and Temperature',
-			curveType: 'function',
+			//curveType: 'function',
 			legend: { position: 'right' },
 			series: {
 				0: {targetAxisIndex: 0},
