--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 		  var options = {
 			title: 'Humidity and Temperature',
 			//curveType: 'function',
-			legend: { position: 'right' },
+			legend: { position: 'bottom' },
 			series: {
 				0: {targetAxisIndex: 0},
 				1: {targetAxisIndex: 1}
