--- a/index.html
+++ b/index.html
@@ -35,8 +35,11 @@
 
           var chart = new google.visualization.LineChart($('#chartT').get(0));
 		  var options = {
-			title: 'Temperature/C',
+			title: 'Temperature',
 			curveType: 'function',
+			legend: { position: 'none' },
+			vAxes: {title: 'Temperature/C'
+			}
 			};
           chart.draw(data, options);
 
@@ -71,8 +74,11 @@
 
           var chart = new google.visualization.LineChart($('#chartH').get(0));
 			var options = {
-			title: 'Humidity/%',
+			title: 'Humidity',
 			curveType: 'function',
+			legend: { position: 'none' },
+			vAxes: {title: 'Humidity/%'
+			}
 			};
 			
           chart.draw(data, options);
@@ -95,8 +101,8 @@
           var data = new google.visualization.DataTable();
 
           data.addColumn('datetime', 'Time');
-          data.addColumn('number', 'Temp/C');
-          data.addColumn('number', 'Humidity/%');
+          data.addColumn('number', 'Temp');
+          data.addColumn('number', 'Humidity');
 
           $.each(results, function (i, row) {
             data.addRow([
