--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		  var options = {
 			title: 'Temperature',
 			curveType: 'function',
-			legend: { position: 'none' },
+			legend: { position: 'none' }
 			
 			};
           chart.draw(data, options);
@@ -75,7 +75,7 @@
 			var options = {
 			title: 'Humidity',
 			curveType: 'function',
-			legend: { position: 'none' },
+			legend: { position: 'none' }
 			
 			};
 			
