--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
 			title: 'Humidity',
 			curveType: 'function',
 			legend: { position: 'none' }
-			
+			vAxes: {title: 'Humidity/%'
+			}
 			};
 			
           chart.draw(data, options);
@@ -163,8 +164,8 @@
 	<hr>
     <div id="chart" style="width: 100%; height: 300px"></div>
 	<br/>
-	<div id="chartT" style="width: 100%;"></div>
 	<div id="chartH" style="width: 100%;"></div>
+	<div id="chartT" style="width: 100%;"></div>
 	<br/>
 	<a title="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" href="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" target="_blank">Click Here for Data Stream</a>
   </body>
