--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			title: 'Humidity',
 			curveType: 'function',
 			legend: { position: 'none' }
-			vAxes: {title: 'Humidity/%'
+			vAxes: {title: 'Humidity/%'}
 			}
 			};
 			
