--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
 			title: 'Humidity',
 			curveType: 'function',
 			legend: { position: 'none' }
-			
+			vAxes: {title: 'Humidity/%'
+			}		
 			};
 			
           chart.draw(data, options);
