--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 			var options = {
 			title: 'Humidity',
 			curveType: 'function',
-			legend: { position: 'none' }
-			
+			legend: { position: 'none' },
+			vAxis: {title: "Humidity/%"}
 			};
 			
           chart.draw(data, options);
