--- a/index.html
+++ b/index.html
@@ -130,10 +130,11 @@
 				1: {title: 'Humidity/%',
 					viewWindow: {
 						max:100,
-						min:0},
+						min:0
 					},
 					},
-			colors: ['blue', 'red']
+					},
+			colors: ['blue', 'black']
 			}	
 			
 			chart.draw(data, options );
