--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
 					},
 					},
 					},
-			colors: ['blue', 'red']
+			colors: ['blue', 'red'],
+			explorer{}
 			}	
 			
 			chart.draw(data, options );
