--- a/index.html
+++ b/index.html
@@ -174,5 +174,8 @@
 	<div id="chartT" style="width: 100%;"></div>
 	<br/>
 	<a title="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" href="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" target="_blank">Click Here for Data Stream</a>
+	<br/>
+	<a href=\"/?buttonson\"\">Turn On Sensor</a>
+	<a href=\"/?buttonsoff\"\">Turn Off Sensor</a>
   </body>
 </html>
