--- a/index.html
+++ b/index.html
@@ -162,6 +162,9 @@
     </script>
     <META HTTP-EQUIV="refresh" CONTENT="60">
 	<title>SHT1 Stream</title>
+	<meta name='apple-mobile-web-app-capable' content='yes' />
+	<meta name='apple-mobile-web-app-status-bar-style' content='black-translucent' />
+	<link rel='stylesheet' type='text/css' href='http://randomnerdtutorials.com/ethernetcss.css' />
   </head>
   <body>
     <body style="background-color:aqua">
