--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 	<title>SHT1 Stream</title>
 	<meta name='apple-mobile-web-app-capable' content='yes' />
 	<meta name='apple-mobile-web-app-status-bar-style' content='black-translucent' />
-	<link rel='stylesheet' type='text/css' href='http://randomnerdtutorials.com/ethernetcss.css' />
+	<link rel='stylesheet' type='text/css' class="but" href='http://randomnerdtutorials.com/ethernetcss.css' />
   </head>
   <body>
     <body style="background-color:aqua">
@@ -178,7 +178,7 @@
 	<br/>
 	<a title="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" href="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" target="_blank">Click Here for Data Stream</a>
 	<br/>
-	<a href=\"/?buttonson\"\">Turn On Sensor</a>
-	<a href=\"/?buttonsoff\"\">Turn Off Sensor</a>
+	<a class="but" href=\"/?buttonson\"\">Turn On Sensor</a>
+	<a class="but" href=\"/?buttonsoff\"\">Turn Off Sensor</a>
   </body>
 </html>
