--- a/index.html
+++ b/index.html
@@ -174,5 +174,7 @@
 	<div id="chartT" style="width: 100%;"></div>
 	<br/>
 	<a title="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" href="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" target="_blank">Click Here for Data Stream</a>
+	<br/>
+	<button type="button" onclick="GET http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=End&temp=End">Click Me!</button>
   </body>
 </html>
