--- a/index.html
+++ b/index.html
@@ -175,6 +175,8 @@
 	<br/>
 	<a title="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" href="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" target="_blank">Click Here for Data Stream</a>
 	<br/>
-	<button type="button" onclick="GET http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=End&temp=End">Click Me!</button>
-  </body>
+	<form action="http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=End&temp=End" method="get">
+    <input type="submit" value="Submit">
+</form>
+   </body>
 </html>
