--- a/index.html
+++ b/index.html
@@ -162,6 +162,29 @@
     </script>
     <META HTTP-EQUIV="refresh" CONTENT="60">
 	<title>SHT1 Stream</title>
+	<style type="text/css">
+				.my_content_container a {
+				text-decoration:none;
+				width:75px;
+				height:50px;
+				border-color:black;
+				border-top:2px solid;
+				border-bottom:2px solid;
+				border-right:2px solid;
+				border-left:2px solid;
+				border-radius:10px 10px 10px;
+				-o-border-radius:10px 10px 10px;
+				-webkit-border-radius:10px 10px 10px;
+				font-family:"Trebuchet MS",Arial, Helvetica, sans-serif;
+				-moz-border-radius:10px 10px 10px;
+				background-color:#293F5E;
+				padding:8px;
+				text-align:center;
+				:link {color:white;};      
+				:visited {color:white;};  
+				:hover {color:white;};  
+				:active {color:white;};  				
+				}
   </head>
   <body>
     <body style="background-color:aqua">
@@ -175,8 +198,8 @@
 	<br/>
 	<a title="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" href="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" target="_blank">Click Here for Data Stream</a>
 	<br/>
-	<form action="http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=End&temp=End" method="get">
-    <input type="submit" value="Submit">
-</form>
+	<div class="my_content_container">
+    <a href="http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=End&temp=End">Go to my link location</a>
+	</div>
    </body>
 </html>
