--- a/index.html
+++ b/index.html
@@ -174,5 +174,24 @@
 	<div id="chartT" style="width: 100%;"></div>
 	<br/>
 	<a title="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" href="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" target="_blank">Click Here for Data Stream</a>
+    <style type="text/css">
+.my_content_container a {
+    border-bottom: 1px solid #777777;
+    border-left: 1px solid #000000;
+    border-right: 1px solid #333333;
+    border-top: 1px solid #000000;
+    color: #000000;
+    display: block;
+    height: 2.5em;
+    padding: 0 1em;
+    width: 5em;       
+    text-decoration: none;       
+}
+// :hover and :active styles left as an exercise for the reader.
+</style>
+
+<div class="my_content_container">
+    <a href="/my/link/location/">Go to my link location</a>
+</div>   
    </body>
 </html>
