--- a/index.html
+++ b/index.html
@@ -176,16 +176,22 @@
 	<a title="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" href="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" target="_blank">Click Here for Data Stream</a>
     <style type="text/css">
 .my_content_container a {
-    border-bottom: 1px solid #777777;
-    border-left: 1px solid #000000;
-    border-right: 1px solid #333333;
-    border-top: 1px solid #000000;
-    color: #000000;
-    display: block;
-    height: 2.5em;
-    padding: 0 1em;
-    width: 5em;       
-    text-decoration: none;       
+text-decoration:none;
+width:75px;
+height:50px;
+border-color:black;
+border-top:2px solid;
+border-bottom:2px solid;
+border-right:2px solid;
+border-left:2px solid;
+border-radius:10px 10px 10px;
+-o-border-radius:10px 10px 10px;
+-webkit-border-radius:10px 10px 10px;
+font-family:"Trebuchet MS",Arial, Helvetica, sans-serif;
+-moz-border-radius:10px 10px 10px;
+background-color:#293F5E;
+padding:8px;
+text-align:center;       
 }
 // :hover and :active styles left as an exercise for the reader.
 </style>
