--- a/index.html
+++ b/index.html
@@ -174,7 +174,8 @@
 	<div id="chartT" style="width: 100%;"></div>
 	<br/>
 	<a title="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" href="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" target="_blank">Click Here for Data Stream</a>
-    <style type="text/css">
+    <br/>
+	<style type="text/css">
 .my_content_container a {
 text-decoration:none;
 width:75px;
@@ -191,7 +192,11 @@ font-family:"Trebuchet MS",Arial, Helvetica, sans-serif;
 -moz-border-radius:10px 10px 10px;
 background-color:#293F5E;
 padding:8px;
-text-align:center;       
+text-align:center;   
+:link {color:white;}     
+:visited {color:white;}  
+:hover {color:white;} 
+:active {color:white;}    
 }
 // :hover and :active styles left as an exercise for the reader.
 </style>
