--- a/index.html
+++ b/index.html
@@ -193,10 +193,10 @@ font-family:"Trebuchet MS",Arial, Helvetica, sans-serif;
 background-color:#293F5E;
 padding:8px;
 text-align:center;   
-:link {color:white;}     
-:visited {color:white;}  
-:hover {color:white;} 
-:active {color:white;}    
+:link {color:white;};     
+:visited {color:white;};  
+:hover {color:white;} ;
+:active {color:white;} ;   
 }
 // :hover and :active styles left as an exercise for the reader.
 </style>
