--- a/index.html
+++ b/index.html
@@ -192,13 +192,12 @@ font-family:"Trebuchet MS",Arial, Helvetica, sans-serif;
 -moz-border-radius:10px 10px 10px;
 background-color:#293F5E;
 padding:8px;
-text-align:center;   
-:link {color:white;};     
-:visited {color:white;};  
-:hover {color:white;} ;
-:active {color:white;} ;   
+text-align:center;    
 }
-// :hover and :active styles left as an exercise for the reader.
+a:link {color:white;}      
+a:visited {color:white;}  
+a:hover {color:white;}  
+a:active {color:white;}  
 </style>
 
 <div class="my_content_container">
