--- a/index.html
+++ b/index.html
@@ -192,12 +192,12 @@ font-family:"Trebuchet MS",Arial, Helvetica, sans-serif;
 -moz-border-radius:10px 10px 10px;
 background-color:#293F5E;
 padding:8px;
-text-align:center;
-a:link {color:white;}      
-a:visited {color:white;}  
-a:hover {color:white;}  
-a:active {color:white;}    
+text-align:center;   
 }
+a.my_content_container:link {color:white;}      
+a.my_content_container:visited {color:white;}  
+a:hover {color:white;}  
+a:active {color:white;}
   
 </style>
 
