--- a/index.html
+++ b/index.html
@@ -196,11 +196,11 @@ text-align:center;
 }
 a.my_content_container:link {color:white;}      
 a.my_content_container:visited {color:white;}  
-a:hover {color:white;}  
-a:active {color:white;}
+a:my_content_container {color:white;}  
+a:my_content_container {color:white;}
   
 </style>
-
+<br/>
 <div class="my_content_container">
     <a href="/my/link/location/">Go to my link location</a>
 </div>   
