--- a/index.html
+++ b/index.html
@@ -181,10 +181,10 @@
 			padding:8px;
 			text-align:center;   
 		}
-		a.my_content_container:link {color:white;}      
-		a.my_content_container:visited {color:white;}  
-		a.my_content_container:hover {color:white;}  
-		a.my_content_container:active {color:white;}
+		a:link {color:white;}      
+		a:visited {color:white;}  
+		a:hover {color:white;}  
+		a:active {color:white;}
 	</style>
   </head>
   <body>
