--- a/index.html
+++ b/index.html
@@ -181,10 +181,10 @@
 			padding:8px;
 			text-align:center;   
 		}
-		a:link {color:white;}      
-		a:visited {color:white;}  
-		a:hover {color:white;}  
-		a:active {color:white;}
+		.my_content_container a:link {color:white;}      
+		.my_content_container a:visited {color:white;}  
+		.my_content_container a:hover {color:white;}  
+		.my_content_container a:active {color:white;}
 	</style>
   </head>
   <body>
