--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <META HTTP-EQUIV="refresh" CONTENT="60">
 	<title>SHT1 Stream</title>
 	<style type="text/css">
-		.my_content_container a {
+		.start_end a {
 		text-decoration:none;
 			width:75px;
 			height:50px;
@@ -181,10 +181,10 @@
 			padding:8px;
 			text-align:center;   
 		}
-		.my_content_container a:link {color:white;}      
-		.my_content_container a:visited {color:white;}  
-		.my_content_container a:hover {color:white;}  
-		.my_content_container a:active {color:white;}
+		.start_end a:link {color:white;}      
+		.start_end a:visited {color:white;}  
+		.start_end a:hover {color:white;}  
+		.start_end a:active {color:white;}
 	</style>
   </head>
   <body>
@@ -200,8 +200,9 @@
 	<a title="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" href="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" target="_blank">Click Here for Data Stream</a>
     <br/>
 	<br/>
-	<div class="my_content_container">
-		<a href="/my/link/location/">Go to my link location</a>
+	<div class="start_end">
+		<a href="http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=Start&temp=Start">Sensor Start</a>
+		<a href="http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=End&temp=End">Sensor End</a>
 	</div>   
    </body>
 </html>
