--- a/index.html
+++ b/index.html
@@ -147,6 +147,17 @@
 		  
          }
 
+	  function closeOnLoad(myLink){
+	  
+		var newWindow = window.open(myLink, "connectWindow", "width=600,height=400,scrollbars=yes");
+			setTimeout(
+				function(){
+                newWindow.close();
+				},
+            1000
+            );
+  return false;
+}
 
 
       // load chart lib
@@ -161,6 +172,7 @@
 
     </script>
     <META HTTP-EQUIV="refresh" CONTENT="60">
+	<meta charset=utf-8 />
 	<title>SHT1 Stream</title>
 	<style type="text/css">
 		.start_end a {
@@ -201,8 +213,8 @@
     <br/>
 	<br/>
 	<div class="start_end">
-		<a href="http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=Start&temp=Start">Sensor Start</a>
-		<a href="http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=End&temp=End">Sensor End</a>
+		<a href="#" target="_blank" onclick="javascript:closeOnLoad('http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=Start&temp=Start')>Sensor Start</a>
+		<a href="http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=End&temp=End" target="_blank">Sensor End</a>
 	</div>   
    </body>
 </html>
