--- a/index.html
+++ b/index.html
@@ -213,8 +213,10 @@
     <br/>
 	<br/>
 	<div class="start_end">
-		<a href="#" target="_blank" onclick="javascript:closeOnLoad('http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=Start&temp=Start')>Sensor Start</a>
 		<a href="http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=End&temp=End" target="_blank">Sensor End</a>
 	</div>   
+	<br/>
+	<p><a href="#" target="_blank" onclick="javascript:closeOnLoad('http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=Start&temp=Start')>Sensor Start</a></p>
+		
    </body>
 </html>
