--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 		<a href="http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=End&temp=End" target="_blank">Sensor End</a>
 	</div>   
 	<br/>
-	<p><a href="#" target="_blank" onclick="javascript:closeOnLoad('http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=Start&temp=Start')>Sensor Start</a></p>
+	<p><a href="#" onclick="javascript:closeOnLoad('http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=Start&temp=Start')>Sensor Start</a></p>
 		
    </body>
 </html>
