--- a/index.html
+++ b/index.html
@@ -213,10 +213,9 @@
     <br/>
 	<br/>
 	<div class="start_end">
+		<a href="http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=Start&temp=Start" target="_blank" setTimeout(1000)>Sensor Start</a>
 		<a href="http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=End&temp=End" target="_blank">Sensor End</a>
 	</div>   
-	<br/>
-	<p><a href="#" onclick="javascript:closeOnLoad('http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=Start&temp=Start')>Sensor Start</a></p>
 		
    </body>
 </html>
