--- a/index.html
+++ b/index.html
@@ -159,6 +159,10 @@
   return false;
 }
 
+	  function newPopup(url) {
+		popupWindow = window.open(
+			url,'popUpWindow','height=300,width=400,left=10,top=10,resizable=yes,scrollbars=yes,toolbar=yes,menubar=no,location=no,directories=no,status=yes')
+		}
 
       // load chart lib
       google.load('visualization', '1', {
@@ -213,9 +217,11 @@
     <br/>
 	<br/>
 	<div class="start_end">
-		<a href="http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=Start&temp=Start" target="_blank" setTimeout(1000)>Sensor Start</a>
+		<a href="http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=Start&temp=Start" target="_blank">Sensor Start</a>
 		<a href="http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=End&temp=End" target="_blank">Sensor End</a>
-	</div>   
+	</div> 
+	<br/>
+	<p><a href="JavaScript:newPopup('http://www.quackit.com/javascript/examples/sample_popup.cfm');">Open a popup window</a></p>
 		
    </body>
 </html>
