--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
 
 	  function newPopup(url) {
 		popupWindow = window.open(
-			url,'popUpWindow','height=300,width=400,left=10,top=10,resizable=yes,scrollbars=yes,toolbar=yes,menubar=no,location=no,directories=no,status=yes'),
-			delay(1000),
-			popUpWindow.close();
+			url,'popupWindow','height=300,width=400,left=10,top=10,resizable=yes,scrollbars=yes,toolbar=yes,menubar=no,location=no,directories=no,status=yes'),
+			delay(3000),
+			popupWindow.close();
 	  }
 
 	  
