--- a/index.html
+++ b/index.html
@@ -201,8 +201,9 @@
     <br/>
 	<br/>
 	<div class="start_end">
-		<a href="http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=Start&temp=Start" target="_blank">Sensor Start</a>
-		<a href="http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=End&temp=End" target="_blank">Sensor End</a>
-	</div> 
+		<a href="http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=Start&temp=Start" target="_blank">Turn On Sensor</a>
+		<a href="http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=End&temp=End" target="_blank">Turn Off Sensor</a>
+	</div>
+	<p>Sensor Status: X</p>
    </body>
 </html>
