--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
           var chart = new google.visualization.LineChart($('#chart').get(0));
 		  var options = {
 			title: 'Humidity and Temperature',
-			//curveType: 'function',
-			//explorer{axis: 'horizontal'},
+			curveType: 'function',
+			explorer{axis: 'horizontal'},
 			legend: { position: 'bottom' },
 			series: {
 				0: {targetAxisIndex: 0},
