--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 		  var options = {
 			title: 'Humidity and Temperature',
 			curveType: 'function',
-			explorer{axis: 'horizontal'},
+			//explorer{axis: 'horizontal'},
 			legend: { position: 'bottom' },
 			series: {
 				0: {targetAxisIndex: 0},
