--- a/index.html
+++ b/index.html
@@ -147,7 +147,21 @@
 		  
          }
 
+
+	  
+	  
+		var status = "";
+	    $json = file_get_contents('https://data.sparkfun.com/output/3J5xqbLGGqcJQqMor7g8.json');
+		$obj = json_decode($json,true);
+		if ($obj[0]["humidity"] == "End")
+		{
+			status = "Off";
+		}
+		document.getElementById("status").innerHTML = status;
+			
+		
 	    
+	  
       // load chart lib
       google.load('visualization', '1', {
         packages: ['corechart']
@@ -204,6 +218,7 @@
 		<a href="http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=Start&temp=Start" target="_blank">Turn On Sensor</a>
 		<a href="http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=End&temp=End" target="_blank">Turn Off Sensor</a>
 	</div>
-	<p>Sensor Status: X</p>
+	<p>Sensor Status: </p>
+	<p id="status"></p>
    </body>
 </html>
