--- a/index.html
+++ b/index.html
@@ -157,12 +157,13 @@
           dataType: 'jsonp',
         }).done(function (results) {
 			console.log(results[0]);
+			if (results[0].humidity] == "End")
+		{
+			status = "Off";
+		}
+		document.getElementById("status").innerHTML = status;
 		});
-		//if ($obj[0]["humidity"] == "End")
-		//{
-		//	status = "Off";
-		//}
-		//document.getElementById("status").innerHTML = status;
+		//
 			
 		
 	    
