--- a/index.html
+++ b/index.html
@@ -160,6 +160,8 @@
 			if (results[0].humidity] == "End")
 		{
 			status = "Off";
+		}else {
+		status = "On";
 		}
 		document.getElementById("status").innerHTML = status;
 		});
