--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           dataType: 'jsonp',
         }).done(function (results) {
 			console.log(results[0]);
-			if (results[0].humidity] == "End")
+			if (results[0].humidity == "End")
 		{
 			status = "Off";
 		}else {
