--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 	  
 	   var public_key = '3J5xqbLGGqcJQqMor7g8';
 		var status = "";
-		var link = '<div class="start_end"><a href="http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=Start&temp=Start" target="_blank">Turn On Sensor</a><a href="http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=End&temp=End" target="_blank">Turn Off Sensor</a></div>';
+		var link = "<div class='start_end'><a href='http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=Start&temp=Start' target='_blank'>Turn On Sensor</a><a href='http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=End&temp=End' target='_blank'>Turn Off Sensor</a></div>";
 						
 		var jsonData = $.ajax({
           url: 'https://data.sparkfun.com/output/' + public_key + '.json',
