--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
 
 	    var public_key = '3J5xqbLGGqcJQqMor7g8';
-		var status = "";				
+		var Vstatus = "";				
 		var jsonData = $.ajax({
           url: 'https://data.sparkfun.com/output/' + public_key + '.json',
           data: {'gte' :{'timestamp' : 'now - 1440 minutes'}},
@@ -158,11 +158,11 @@
 			//console.log(results[0].humidity);
 			if (results[0].humidity == "End")
 		{
-			status = "Sensor Status: " + "Off";
+			Vstatus = "Sensor Status: " + "Off";
 		}else{
-		status = "Sensor Status: " + "On";
+		Vstatus = "Sensor Status: " + "On";
 		}
-		document.getElementById("status").innerHTML = status;
+		document.getElementById("statID").innerHTML = Vstatus;
 		});
 		//
 			
@@ -225,6 +225,6 @@
 		<a href='http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=Start&temp=Start' target='_blank'>Turn On Sensor</a>
 		<a href='http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=End&temp=End' target='_blank'>Turn Off Sensor</a>
 	</div>
-	<p id="status"></p>
+	<p id="statID"></p>
    </body>
 </html>
