--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
 
 	    var public_key = '3J5xqbLGGqcJQqMor7g8';
-		var Vstatus = "";				
+		var Vstatus = "Sensor Status Unknown";				
 		var jsonData = $.ajax({
           url: 'https://data.sparkfun.com/output/' + public_key + '.json',
           data: {'gte' :{'timestamp' : 'now - 1440 minutes'}},
