--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
 		  
          }
 
-
+	  window.onload = function Sensor_Status(){
 	    var public_key = '3J5xqbLGGqcJQqMor7g8';
-		var Vstatus = "";				
+		var Vstatus = "Status Unknown";				
 		var jsonData = $.ajax({
           url: 'https://data.sparkfun.com/output/' + public_key + '.json',
           data: {page: 1},
@@ -164,8 +164,8 @@
 		}
 		document.getElementById("statID").innerHTML = Vstatus;
 		});
-		//
-			
+		
+	  }	
 		
 	    
 	  
