--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
 			
 		  });
 		  
-         }
-
+       }
+	
 	  window.onload = function Sensor_Status(){
 	    var public_key = '3J5xqbLGGqcJQqMor7g8';
 		var Vstatus = "Status Unknown";				
@@ -167,6 +167,9 @@
 		
 	  };	
 		
+	  wiundow.onload = function reload() {
+		location.reload();
+	  }
 	    
 	  
       // load chart lib
@@ -221,9 +224,9 @@
 	<a title="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" href="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" target="_blank">Click Here for Data Stream</a>
     <br/>
 	<br/>
-	<div class='start_end'>
-		<a href='http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=Start&temp=Start' target='_blank'>Turn On Sensor</a>
-		<a href='http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=End&temp=End' target='_blank'>Turn Off Sensor</a>
+	<div class="start_end">
+		<a href="http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=Start&temp=Start" target="_blank" onclick="myFunction()">Turn On Sensor</a>
+		<a href="http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=End&temp=End" target="_blank" onclick="reload()">Turn Off Sensor</a>
 	</div>
 	<br/>
 	<p id="statID"></p>
