--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 		
 	  };	
 		
-	  wiundow.onload = function reload() {
+	  window.onload = function reload() {
 		location.reload();
 	  }
 	    
