--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 		  
        }
 	   
-	  window.omload = function Sensor_Status(){
+	  window.onload = function Sensor_Status(){
 		var public_key = '3J5xqbLGGqcJQqMor7g8';
 		var Vstatus = "Status Unknown";				
 		var jsonData = $.ajax({
