--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		  var options = {
 			title: 'Temperature',
 			curveType: 'function',
-			legend: { position: 'right' },
+			legend: { position: 'none' },
 			vAxis: {title: "Temperature/C"},
 			colors: ['blue']
 			};
