--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
     <br/>
 	<br/>
 	<div class="start_end">
-		<a href="http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=£&temp=£" target="_blank" onclick="reload()">Turn On Sensor</a>
-		<a href="http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=$&temp=$" target="_blank" onclick="reload()">Turn Off Sensor</a>
+		<a href="http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=Start&temp=Start" target="_blank" onclick="reload()">Turn On Sensor</a>
+		<a href="http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=End&temp=End" target="_blank" onclick="reload()">Turn Off Sensor</a>
 	</div>
 	
 	<p id="statID"></p>
