--- a/rpi.html
+++ b/rpi.html
@@ -221,7 +221,7 @@
 	<br/>
 	<div class="start_end">
 		<a href="http://data.sparkfun.com/input/3JLDEmrrOvia1Dwaa51E?private_key=oZJdk2ee0EsVmMJVV9mj&humidity=Start&temp=Start" target="_blank" onclick="reload()">Turn On Sensor</a>
-		<a href="http://data.sparkfun.com/input/3JLDEmrrOvia1Dwaa51E?private_key=oZJdk2ee0EsVmMJVV9mj&humidity=End&temp=End" target="_blank" onclick="reload()">Turn Off Sensor</a>
+		<a href="http://data.sparkfun.com/input/3JLDEmrrOvia1Dwaa51E?private_key=oZJdk2ee0EsVmMJVV9mj&humidity=$&temp=$" target="_blank" onclick="reload()">Turn Off Sensor</a>
 	</div>
 	
 	<p id="statID"></p>
