--- a/rpi.html
+++ b/rpi.html
@@ -148,7 +148,7 @@
        }
 	   
 	  window.onload = function Sensor_Status(){
-		var public_key = '3J5xqbLGGqcJQqMor7g8';
+		var public_key = '3JLDEmrrOvia1Dwaa51E';
 		var Vstatus = "Status Unknown";				
 		var jsonData = $.ajax({
 			url: 'https://data.sparkfun.com/output/' + public_key + '.json',
